# Cursed-chat

./: .gitignore  CMakeLists.txt  README.md
Headers/: core_client.h  core_server.h  log_file.h  shared_header.h
Sources/: inet_pton.c  log_file.c  main.c
Sources/Client/: client.c
Sources/Server/: poll_collector.c  server.c
